[project]
name = "bio-sea-pearl"
version = "0.1.0"
description = "Sequence analysis and bioinformatics utilities in Python and Perl."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.26.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "requests (>=2.32.5,<3.0.0)",
]


[tool.poetry]
packages = [
    { include = "bio_sea_pearl", from = "src" }
]

[tool.poetry.scripts]
biosea = "bio_sea_pearl.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"