[project]
name = "bio-sea-pearl"
version = "0.1.2"
description = "Sequence analysis and bioinformatics utilities in Python and Perl."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.26.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "mkdocs-swagger-ui-tag>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
biosea = "bio_sea_pearl.cli:app"

[project.urls]
Homepage = "https://github.com/bibymaths/bio-sea-pearl"
Documentation = "https://bibymaths.github.io/bio-sea-pearl/"
Repository = "https://github.com/bibymaths/bio-sea-pearl"
Issues = "https://github.com/bibymaths/bio-sea-pearl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bio_sea_pearl"]

[tool.hatch.build.targets.wheel.force-include]
"api" = "api"
"alignment" = "alignment"
"markov" = "markov"
"seqtools" = "seqtools"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 120
